# OpenSquirrel

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  index.html  mkdocs-base.yaml  mkdocs.yaml  objects.inv  pyproject.toml  setup.py  sitemap.xml  tox.ini  tutorial.html  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: docs.yml  release.yaml  tests.yaml
0.6.0/: index.html  objects.inv
0.6.0/reference/: circuit.html  circuit_matrix_calculator.html  default_gate_modifiers.html  default_instructions.html  exceptions.html  reference.html
0.6.0/search/: search_index.json
0.6.0/tutorial/: creating-a-circuit.html  writing-out-and-exporting.html
0.6.1/: index.html  installation.html
0.6.1/compilation-passes/: index.html
0.6.1/reference/: circuit_matrix_calculator.html  reference.html
0.6.1/search/: search_index.json
0.6.1/tutorial/: applying-compilation-passes.html
0.7.0/circuit-builder/: index.html
0.7.0/reference/: circuit.html  circuit_matrix_calculator.html  common.html  default_gate_modifiers.html  default_instructions.html  exceptions.html  reference.html  register_manager.html
0.7.0/tutorial/: applying-compilation-passes.html  creating-a-circuit.html  index.html  writing-out-and-exporting.html
0.8.0/circuit-builder/: index.html
0.8.0/compilation-passes/: index.html
0.8.0/reference/: circuit.html  circuit_builder.html  circuit_matrix_calculator.html  reference.html
0.8.0/tutorial/: applying-compilation-passes.html  index.html  writing-out-and-exporting.html
0.9.0/: 404.html  installation.html
0.9.0/circuit-builder/: index.html
0.9.0/compilation-passes/: index.html
0.9.0/reference/: circuit.html  circuit_builder.html  circuit_matrix_calculator.html  default_gate_modifiers.html  default_instructions.html  reference.html
0.9.0/search/: search_index.json
0.9.0/tutorial/: applying-compilation-passes.html  creating-a-circuit.html
concept/: circuit.py  main.py
concept/passes/: decomposer.py  writer.py
data/: static.json
development/: index.html
docs/: development.md  how-to-guides.md  index.md  installation.md  overview_passes.md  reference.md  tutorial.ipynb  tutorial.md  tutorials.md
docs/circuit-builder/: index.md
docs/compilation-passes/: index.md  overview.md
docs/reference/: index.html
docs/tutorial/: applying-compilation-passes.md  creating-a-circuit.md  index.md  overview.md  tutorial_overview.md  writing-out-and-exporting.md
example/: README.md  decompositions.ipynb
example/tutorials/: decompositions.ipynb
explanation/: index.html
how-to-guides/: index.html
javascripts/: mathjax.js
latest/: 404.html  index.html  installation.html  objects.inv
latest/circuit-builder/: index.html
latest/compilation-passes/: index.html
latest/reference/: circuit.html  circuit_builder.html  circuit_matrix_calculator.html  common.html  default_gate_modifiers.html  default_instructions.html  exceptions.html  reference.html  register_manager.html
latest/search/: search_index.json
latest/tutorial/: applying-compilation-passes.html  creating-a-circuit.html  index.html  writing-out-and-exporting.html
open_squirrel/: __init__.py  circuit.py  circuit_builder.py  circuit_matrix_calculator.py  default_gates.py  default_measurements.py  ir.py  register_manager.py
open_squirrel/decomposer/: cnot_decomposer.py  general_decomposer.py  mckay_decomposer.py  zyz_decomposer.py
open_squirrel/exporter/: quantify_scheduler_exporter.py  writer.py
open_squirrel/mapper/: __init__.py  general_mapper.py  qubit_remapper.py  simple_mappers.py  utils.py
open_squirrel/merger/: general_merger.py
open_squirrel/reindexer/: __init__.py  qubit_reindexer.py
open_squirrel/utils/: __init__.py  identity_filter.py  (+1 more)
openosq12/: pyvenv.cfg
opensquirrel/: Circuit.py  CircuitBuilder.py  Common.py  DefaultGates.py  Gates.py  MatrixExpander.py  McKayDecomposer.py  Replacer.py  SquirrelAST.py  SquirrelASTCreator.py  SquirrelErrorHandler.py  TestInterpreter.py  TypeChecker.py  Writer.py  __init__.py  circuit.py  circuit_builder.py  circuit_matrix_calculator.py  cnot_decomposer.py  common.py  default_directives.py  default_gate_modifiers.py  default_gates.py  default_instructions.py  default_measurements.py  default_measures.py  default_resets.py  exceptions.py  export_format.py  gate_library.py  gates.py  heuristics.py  instruction_library.py  ir.py  matrix_expander.py  mckay_decomposer.py  merger.py  operation_library.py  phase_map.py  phase_record.py  (+11 more)
reference/: circuit.html  circuit_builder.html  circuit_matrix_calculator.html  common.html  default_gates.html  default_measurements.html  default_resets.html  exceptions.html  index.html  instruction_library.html  ir.html  reference.html  register_manager.html
scripts/: gen_reference_page.py
search/: search_index.json
src/: Circuit.py  CircuitBuilder.py  Common.py  DefaultGates.py  Gates.py  MatrixExpander.py  McKayDecomposer.py  Replacer.py  SquirrelAST.py  SquirrelASTCreator.py  SquirrelErrorHandler.py  TestInterpreter.py  TypeChecker.py  Writer.py
test/: TestGates.py  TestHelpers.py  ir_equality_test_base.py  test_asm_declaration.py  test_circuit.py  test_circuit_builder.py  test_circuit_matrix_calculator.py  test_circuitbuilder.py  test_cnot_decomposer.py  test_decompose_mckay.py  test_init.py  test_instructions.py  test_integration.py  test_ir.py  test_libqasm.py  test_mckay_decomposer.py  test_measure.py  test_merger.py  test_parsing.py  test_qubit_range_checker.py  test_registers.py  test_replacer.py  test_reset.py  test_squirrel_ir.py  test_testinterpreter.py  test_wait.py  test_writer.py  test_xyx_decomposer.py  test_zyz_decomposer.py
tests/: __init__.py  ir_equality_test_base.py  test_argument_domain.py  test_asm_declaration.py  test_circuit.py  test_circuit_builder.py  test_circuit_matrix_calculator.py  test_ir.py  test_parameter_domain.py  test_phase_map.py  test_phase_record.py  test_registers.py  test_replacer.py
tutorial/: index.html
tutorials/: index.html
(+588 files in other folders)
