[tool.poetry]
name = "opensquirrel"
version = "0.0.5"
description = "A quantum circuit transformation and manipulation tool"
authors = [
    "Quantum Inspire <support@quantum-inspire.com>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/QuTech-Delft/OpenSquirrel"
repository = "https://github.com/QuTech-Delft/OpenSquirrel"
keywords = [
    "quantum",
    "circuits",
    "compilation",
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'License :: OSI Approved :: Apache Software License'
]
packages = [
    { include = "opensquirrel" },
]

[tool.poetry.dependencies]
python = "^3.8"
antlr4-python3-runtime = "^4.13.1"
numpy = [
    { version = "1.24", python = "<3.9" },
    { version = "^1.26", python = "^3.9" },
]
libqasm = "0.6.5"
networkx = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.11,<25.0"
coverage = {extras = ["toml"], version = "^7.3.2"}
isort = "^5.11.4"
pytest = {extras = ["toml"], version = ">=7.4.3,<9.0.0"}
pytest-cov = ">=4.1,<6.0"
mypy = "^1.7.0"
pylint = "^3.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = {extras = ["python"], version = "^1.5.3"}
mkdocstrings = {extras = ["python"], version = ">=0.24,<0.26"}
mkdocs_gen_files = {extras = ["python"], version = "^0.5.0"}
mkdocs-material = "^9.4.12"
pymdown-extensions = "^10.7.1"

[tool.poetry.group.export]
optional = true

[tool.poetry.group.export.dependencies]
pyqt5-qt5=[
    # This package is a transitive dependency of quantify-scheduler.
    # The latest version is not portable, therefore it is necessary to pin an older version
    # otherwise Poetry will try to install the latest version and fail on e.g. Windows.
    { version = "5.15.2", python = "<3.10" },
]
quantify-scheduler=[
    # quantify-scheduler is not released for newer Python versions, i.e. > 3.9.
    # Its is only required for exporting opensquirrel circuits to the
    # Schedule format and testing this functionality.
    { version = "^0.18.0", python = "<3.10" },
]

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing:skip-covered --cov-report xml"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = ["tests/*", "**/.tox/**", "opensquirrel/parsing/antlr/generated/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
ignore = "parsing"
max-line-length = 120
disable = ["C0103", "C0114", "C0115", "C0116"]
           # C0103: name formatting
           # C0114: missing module docstring
           # C0115: missing class docstring
           # C0116: missing function docstring

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
